[package]
name = "modbus_forwarder_client_test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.35.1", features = ["full"] }
tokio-modbus = { version = "*", features = ["tcp-server"], git = "https://github.com/Liftnet2/tokio-modbus.git" }
tokio-serial = "5.4.4"
serde = {version = "*", features = ["derive", "serde_derive"]}
serde_json = "1.0.111"
bincode = "1.3.3"
anyhow = "1.0.79"
tokio-util = "0.7.10"
bytes = "1.5.0"
futures = "0.3.30"
tracing = "0.1.40"
ctrlc = "3.4.2"
